# egui-mcp

./: CLAUDE.md  Cargo.toml  README.md
crates/egui-mcp-bridge/: Cargo.toml
crates/egui-mcp-bridge/src/: events.rs  lib.rs  managed.rs  protocol.rs  server.rs  tree.rs  ui_ext.rs
crates/egui-mcp-server/: Cargo.toml
crates/egui-mcp-server/src/: bridge.rs  main.rs  tools.rs
examples/test-app/: Cargo.toml
examples/test-app/src/: main.rs
