[workspace]
resolver = "2"
members = [
    "crates/egui-mcp-bridge",
    "crates/egui-mcp-server",
    "examples/test-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
egui = { version = "0.31", features = ["accesskit"] }
eframe = { version = "0.31", features = ["accesskit"] }
accesskit = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.3", features = ["server", "transport-io"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"
