[package]
name = "egui-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for automated E2E testing of egui applications"

[[bin]]
name = "egui-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true
anyhow = "1"
