[package]
name = "test-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Example egui application for testing egui-mcp"

[[bin]]
name = "test-app"
path = "src/main.rs"

[dependencies]
egui-mcp-bridge = { path = "../../crates/egui-mcp-bridge" }
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
